# FMRT

./: .gitignore  CMakeLists.txt  FMRT-API.md  LICENSE  NOTICE  README.md  REPRODUCIBLE-RUN.txt
bridge/: fmrt_bridge.cpp  fmrt_bridge.h
config/: fmrt_config.hpp  fmrt_constants.hpp  fmrt_types.hpp
docs/: FMRT-Auto-Test-Suite-Document-V2.2.md  FMRT-Build-Metadata-V2.2-EN.md  FMRT-Certification-V2.2.md  FMRT-Code-Review-Document-V2.2-EN.md  FMRT-Compliance-Matrix-V2.2-EN.md  FMRT-Compliance-Report-V2.2-EN.md  FMRT-Design-Document-V2.2-EN.md  FMRT-Development-Certification-Lifecycle-V2.2-EN.md  FMRT-Implementation-Document-V2.2-EN.md  FMRT-Integration-Document-V2.2.md  FMRT-Specification-V2.2-EN.md  FMRT-Static-Analysis-Document-V2.2.md  FMRT-Theoretical-Validation-Document-V2.2.md
src/: diagnostics.cpp  event_handler.cpp  evolution_engine.cpp  fmrt_api.cpp  fp_guard.cpp  invariant_validator.cpp
tests/: fmrt_tests.cpp  test_algorithm_delta.cpp  test_algorithm_det_g.cpp  test_algorithm_kappa_decay.cpp  test_algorithm_phi.cpp  test_algorithm_tau.cpp  test_bridge_numeric_reject_NaN.cpp  test_collapse_after_stress_sequence.cpp  test_collapse_trigger_boundary.cpp  test_collapse_under_gap.cpp  test_collapse_under_heartbeat.cpp  test_determinism_multi_run.cpp  test_determinism_no_hidden_state.cpp  test_determinism_single_run.cpp  test_gap_relax.cpp  test_gap_sequence_stability.cpp  test_heartbeat.cpp  test_heartbeat_high_memory.cpp  test_invariant_collapse_geometry.cpp  test_invariant_forbidden_domain.cpp  test_invariant_kappa_nonnegative.cpp  test_invariant_memory.cpp  (+15 more)
(+19 files in other folders)
